# k

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .project  .travis.yml  CHANGELOG.md  CLAUDE.md  CNAME  CODEOWNERS  CONTRIBUTING.md  Dockerfile  Dockerfile.arch  Dockerfile.debian  Dockerfile.gh  INSTALL  INSTALL-david  INSTALL.md  Jenkinsfile  Jenkinsfile.anka  Kero-u  LICENSE  LICENSE.md  Makefile  OWNERS  PKGBUILD  README  README.md  TODO  USER_MANUAL.md  _config.yml  arch.Dockerfile  build.xml  changelog.md  comments.txt  debian.Dockerfile  default.nix  flake.nix  front-end-requirements.txt  index.html  (+17 more)
extras/k-pipeline/: k-pipeline.cabal
extras/k-pipeline/src/: cellstoxml.hs  kcp.hs  simplemaude.hs
extras/kcp/: kcp.cabal
kup/: .cruft.json  Makefile  README.md  pyproject.toml
kup/src/kup/: __main__.py
pyk/: .cruft.json  .flake8  .gitignore  Dockerfile  Makefile  README.md  flake.nix  genindex.html  index.html  kit-shell  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  test.py
pyk/.github/workflows/: bump-version.yml  master.yml  run-tests.yml  test-pr.yml  update-version.yml
pyk/_modules/: index.html
pyk/_modules/pyk/: coverage.html  dequote.html  kcovr.html  telemetry.html  utils.html
pyk/_sources/api/: modules.rst.txt  pyk.coverage.rst.txt  pyk.cterm.cterm.rst.txt  pyk.cterm.rst.txt  pyk.cterm.show.rst.txt  pyk.cterm.symbolic.rst.txt  pyk.dequote.rst.txt  pyk.k2lean4.k2lean4.rst.txt  pyk.k2lean4.model.rst.txt  pyk.k2lean4.rst.txt  pyk.kast.att.rst.txt  pyk.kast.color.rst.txt  pyk.kast.formatter.rst.txt  pyk.kast.inner.rst.txt  pyk.kast.kast.rst.txt  pyk.kast.lexer.rst.txt  pyk.kast.manip.rst.txt  pyk.kast.markdown.rst.txt  pyk.kast.outer.rst.txt  pyk.kast.outer_lexer.rst.txt  pyk.kast.outer_parser.rst.txt  pyk.kast.outer_syntax.rst.txt  pyk.kast.parser.rst.txt  pyk.kast.prelude.bytes.rst.txt  pyk.kast.prelude.collections.rst.txt  pyk.kast.prelude.k.rst.txt  pyk.kast.prelude.kbool.rst.txt  pyk.kast.prelude.kint.rst.txt  pyk.kast.prelude.ml.rst.txt  pyk.kast.prelude.rst.txt  pyk.kast.prelude.string.rst.txt  pyk.kast.prelude.utils.rst.txt  pyk.kast.pretty.rst.txt  pyk.kast.rewrite.rst.txt  pyk.kast.rst.txt  pyk.kast.utils.rst.txt  pyk.kbuild.config.rst.txt  pyk.kbuild.kbuild.rst.txt  pyk.kbuild.project.rst.txt  pyk.kbuild.rst.txt  (+79 more)
pyk/_static/: documentation_options.js
pyk/api/: modules.html  pyk.coverage.html  pyk.cterm.cterm.html  pyk.cterm.html  pyk.cterm.show.html  pyk.cterm.symbolic.html  pyk.dequote.html  pyk.html  pyk.k2lean4.html  pyk.k2lean4.k2lean4.html  pyk.k2lean4.model.html  pyk.kast.att.html  pyk.kast.color.html  pyk.kast.formatter.html  pyk.kast.html  pyk.kast.inner.html  pyk.kast.kast.html  pyk.kast.lexer.html  pyk.kast.manip.html  pyk.kast.markdown.html  pyk.kast.outer.html  pyk.kast.outer_lexer.html  pyk.kast.outer_parser.html  pyk.kast.outer_syntax.html  pyk.kast.parser.html  pyk.kast.prelude.bytes.html  pyk.kast.prelude.collections.html  pyk.kast.prelude.html  pyk.kast.prelude.k.html  pyk.kast.prelude.kbool.html  pyk.kast.prelude.kint.html  pyk.kast.prelude.ml.html  pyk.kast.prelude.string.html  pyk.kast.prelude.utils.html  pyk.kast.pretty.html  pyk.kast.rewrite.html  pyk.kast.utils.html  pyk.kbuild.config.html  pyk.kbuild.html  pyk.kbuild.kbuild.html  (+79 more)
pyk/docs/: conf.py  generate.sh  index.rst  pipeline.md  regression-triage.md
pyk/imp/: .0.swp  assoc.imp  fuzz.py  imp.k  init.kore  init_var.kore  output.kore
pyk/imp/imp-kompiled/: allRules.txt  compiled.txt  configVars.sh  definition.kore  macros.kore  mainModule.txt  mainSyntaxModule.txt  parsed.txt  scanner  syntaxDefinition.kore
pyk/integration_tests/: Makefile  configuration_test.py  defn_test.py  emit_json_spec_test.py  imp-unproveable-spec.k.expected  kompiled_test.py  kprove_test.py  parse_kast_test.py  simple_kompile_test.py  simple_proofs_test.py  unit_test.py
pyk/integration_tests/kpyk-tests/: sum-to-n.imp
pyk/k-files/: a.k  aliases.k  config.k  contextual-function.k  ctor.k  imp-simple-spec.k  imp-verification.k  imp.k  kore-rpc-test.k  looping-spec.k  non-det.k  return-code.k  simple-proofs.k  sort-synonym.k  steps.k  string-rewrite.k  top-cell-initializer.k
pyk/kit-tests/: Makefile  control-flow.k  looping-spec.k  test-kit.sh  verification.k
pyk/kit-tests/imp/: pyk_sum-to-n.test  pyk_sum-to-n.test.run.expected  sum-to-n-spec.k  sum-to-n.test  sum-to-n.test.run.expected
pyk/nix/: README.md  overlay.nix
pyk/nix/kframework/: default.nix
pyk/package/: Dockerfile  version  version.sh
pyk/pyk-tests/: .gitignore  Makefile  imp-import-graph.expected  imp-unproveable-spec.k.expected  import-graph.expected
pyk/pyk-tests/post-process/: .gitignore  Makefile  assign.k  transform.py
pyk/regression-new/: .gitignore  Makefile  skipped
pyk/regression-new/amb-rew/: Makefile
pyk/regression-new/append/: kparse-twice  test.k
pyk/regression-new/array-haskell/: 1.test  2.test.out  3.test.out  5.test  Makefile  test.k
pyk/regression-new/bad-bytes-literal/: Makefile  quote.k.out  slash.k.out  unicode-escape.k.out  unicode.k  unicode.k.out
pyk/regression-new/bad-flags/: Makefile  extra-flags.out  no-flags.out  test.k
pyk/regression-new/bison-glr-bug/: Makefile  forwarder.iele  iele.k  test.ref
pyk/regression-new/bison-parser-library/: Makefile
pyk/regression-new/bit-range-llvm/: 1.test.out  3.test.out  Makefile
pyk/regression-new/boundary-cells-opt/: Makefile  boundary-cells-test-spec.k  boundary-cells-test.k
pyk/regression-new/bracket-priority/: test.k
pyk/regression-new/bytes-coverage/: Makefile
pyk/regression-new/bytes-haskell/: Makefile
pyk/regression-new/bytes-llvm/: 13.test.out  18.test.out  20.test.out  21.test.out  22.test.out  24.test.out  26.test.out  28.test.out  29.test.out  6.test.out  Makefile
pyk/regression-new/bytes-memset/: 1.test  1.test.out  2.test.out  test.k
pyk/regression-new/cast-kitem/: test.k
pyk/requirements/: base.txt  dev.txt
tools/k-pipeline/: k-pipeline.cabal
tools/krun/: CHANGES  Makefile  README  krun.cabal
tools/language-k/: language-k.cabal
(+22661 files in other folders)
