[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyk"
version = "0.1.64"
description = ""
authors = [
    "Runtime Verification, Inc. <contact@runtimeverification.com>",
]

[tool.poetry.dependencies]
python = "^3.8"
cmd2 = "^2.4.2"
flask = "^2.2.2"
graphene = "^3.1.1"
graphviz = "^0.20.1"
graphql-server = "^3.0.0b5"
gql = { version = "^3.4.0", extras = [ "requests" ] }
tomli = "^2.0.1"

[tool.poetry.group.dev.dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-quotes = "*"
isort = "*"
mypy = "*"
pep8-naming = "*"
types-requests = "^2.28.1"

[tool.poetry.scripts]
pyk = "pyk.__main__:main"
kbuild = "pyk.kbuild.__main__:main"
krepl = "pyk.krepl.__main__:main"
krepl-server = "pyk.krepl_web.server.__main__:main"
"kit.py" = "pyk.ktool.kit:main"

[tool.isort]
profile = "black"
line_length = 120

[tool.autoflake]
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "graphene.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "graphql_server.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "graphviz"
ignore_missing_imports = true
