[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kframework"
version = "7.1.313"
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "coloredlogs>=15.0.1,<16",
    "cookiecutter>=2.6.0,<3",
    "filelock>=3.9.0,<4",
    "graphviz>=0.20.1",
    "hypothesis>=6.103.1,<7",
    "networkx>=3.4.2,<4",
    "psutil>=5.9.5,<6",
    "pybind11>=2.10.3,<3",
    "pytest",
    "textual>=0.27.0",
    "tomli>=2.0.1,<3",
    "xdg-base-dirs>=6.0.1,<7",
]

[[project.authors]]
name = "Runtime Verification, Inc."
email = "contact@runtimeverification.com"

[project.scripts]
pyk = "pyk.__main__:main"
pyk-covr = "pyk.kcovr:main"
kbuild = "pyk.kbuild.__main__:main"
kdist = "pyk.kdist.__main__:main"
klean = "pyk.klean.__main__:main"
krepl = "pyk.krepl.__main__:main"
kore-exec-covr = "pyk.kore_exec_covr.__main__:main"

[project.entry-points.pytest11]
pytest-pyk = "pyk.testing.plugin"

[dependency-groups]
dev = [
    "autoflake",
    "black",
    "flake8",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-quotes",
    "flake8-type-checking",
    "isort",
    "mypy",
    "pep8-naming",
    "pydocstyle",
    "pytest>=7,<8",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "pytest-timeout",
    "pyupgrade",
    "types-psutil>=5.9.5.10,<6",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = ["src/pyk"]

[tool.hatch.build.targets.wheel]
include = ["src/pyk"]

[tool.hatch.build.targets.wheel.sources]
"src/pyk" = "pyk"

[tool.pydocstyle]
convention = "google"
add-select = "D204,D401,D404"
add-ignore = "D1"

[tool.isort]
profile = "black"
line_length = 120

[tool.autoflake]
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "graphviz"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "coloredlogs"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "cookiecutter.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "networkx"
ignore_missing_imports = true
