[metadata]
name = pyk
version = 0.0.1

[options]
python_requires = >= 3.8.*
packages = find:
package_dir =
    =src
install_requires =
    graphviz == 0.19.1
    typing_extensions == 4.1.1

[options.package_data]
* = py.typed

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyk = pyk.__main__:main

[mypy]

[mypy-graphviz.*]
ignore_missing_imports = True

[flake8]
ignore = E501

[isort]
multi_line_output=3
include_trailing_comma=true
ensure_newline_before_comments=true
