[metadata]
name = pyk
version = 0.0.1

[options]
python_requires = >= 3.8.*
packages = find:
package_dir =
    =src
install_requires =
    graphviz == 0.19.1

[options.package_data]
* = py.typed

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pyk = pyk.__main__:main
    kit.py = pyk.ktool.kit:main
