Name:               kcp
Version:            0.1.0
Synopsis:           Compile programs into their K core representations
Description:        This package provides a front-end to the
                    kcompile-program.sh script that compiles programs into
                    their K core representations directly.
License:            MIT
License-file:       LICENSE
Author:             David Lazar
Maintainer:         David Lazar <lazar6@illinois.edu>
Category:           Language
Build-type:         Simple
Cabal-version:      >=1.6

Executable kcp
  Main-is:          KCP.hs
  Build-depends:    base >= 4 && < 5, process, directory, filepath, cmdargs
