Name:               k-pipeline
Version:            0.1.0
Synopsis:           Utilities that are commonly apart of K execution pipelines
License:            MIT
License-file:       LICENSE
Author:             David Lazar
Maintainer:         David Lazar <lazar6@illinois.edu>
Category:           Language
Build-type:         Simple
Cabal-version:      >=1.6

Flag static
  Description:      Build a static binary
  Default:          False

Executable simplemaude
  Hs-source-dirs:   src
  Main-is:          simplemaude.hs
  Build-depends:    base >= 4 && < 5, cmdargs, maude >= 0.1.4
  ghc-options:      -Wall

  if flag(static)
    ghc-options:    -static -optl-static -optl-pthread

Executable cellstoxml
  Hs-source-dirs:   src
  Main-is:          cellstoxml.hs
  Build-depends:    base >= 4 && < 5, bytestring, language-k
  ghc-options:      -Wall

  if flag(static)
    ghc-options:    -static -optl-static -optl-pthread

Executable unlabel
  Hs-source-dirs:   src
  Main-is:          unlabel.hs
  Build-depends:    base >= 4 && < 5, language-k
  ghc-options:      -Wall

  if flag(static)
    ghc-options:    -static -optl-static -optl-pthread

Executable kcp
  Hs-source-dirs:   src
  Main-is:          kcp.hs
  Build-depends:    base >= 4 && < 5, process, directory, filepath, cmdargs
  ghc-options:      -Wall

  if flag(static)
    ghc-options:    -static -optl-static -optl-pthread

Executable xpath
  Hs-source-dirs:   src
  Main-is:          xpath.hs
  Build-depends:    base >= 4 && < 5, hxt, hxt-xpath
  ghc-options:      -Wall

  if flag(static)
    ghc-options:    -static -optl-static -optl-pthread
