Name:               krun
Version:            0.3.0
Synopsis:           Execute K definitions (prototype!)
License:            MIT
License-file:       LICENSE
Author:             David Lazar
Maintainer:         David Lazar <lazar6@illinois.edu>
Category:           Language
Build-type:         Simple
Cabal-version:      >=1.6

Flag static
  Description:      Build a static binary
  Default:          False

Executable krun
  Hs-source-dirs:   src
  Main-is:          KRun/Main.hs
  Build-depends:
    base >= 4 && < 5,
    process,
    filepath,
    directory,
    text,
    cmdargs,
    failure,
    data-object,
    data-object-yaml,
    hxt,
    hxt-xpath,
    maude >= 0.2.2,
    language-k,
    containers,
    attoparsec-text,
    parsec

  ghc-prof-options: -rtsopts -auto-all

--  ghc-options:      -Wall

  if flag(static)
    ghc-options:    -static -optl-static -optl-pthread
