Name:               language-k
Version:            0.2.0
Synopsis:           Parsing tools for the K semantic framework.
License:            MIT
License-file:       LICENSE
Author:             David Lazar
Maintainer:         lazar6@illinois.edu
Category:           Language
Build-type:         Simple
Cabal-version:      >=1.2

Library
  Hs-source-dirs:   src

  Exposed-modules:
    Language.K.CellsToXml
    Language.K.Core
    Language.K.Core.Parser
    Language.K.Core.Pretty
    Language.K.Core.Prettier
    Language.K.Core.Syntax
    Data.Attoparsec.Extra.Text
    Internal.Lexer

  Build-depends:
    base >= 4 && < 5,
    mtl,
    parsec > 3,
    attoparsec-text,
    text,
    ansi-wl-pprint >= 0.6,
    containers

  ghc-prof-options: -auto-all
