Name:               language-k
Version:            0.2.0
Synopsis:           Parsing tools for the K semantic framework.
License:            MIT
License-file:       LICENSE
Author:             David Lazar
Maintainer:         David Lazar <lazar6@illinois.edu>
Category:           Language
Build-type:         Simple
Cabal-version:      >=1.2

Library
  Hs-source-dirs:   src

  Exposed-modules:
    Language.K.Core
    Language.K.Core.Syntax
    Language.K.Core.Parser
    Language.K.Core.Pretty
    Language.K.Core.Prettier
    Internal.Lexer

    -- CellToXml exports:
    Language.K.CellsToXml
    Data.Attoparsec.Extra.Text

  Build-depends:
    base >= 4 && < 5,
    mtl,
    parsec > 3,
    ansi-wl-pprint >= 0.6,
    text,
    attoparsec

  ghc-prof-options: -auto-all
