[metadata]
name = pyk
version = 0.0.1

[options]
python_requires = >= 3.8.*
install_requires =
    graphviz
    typing_extensions

[mypy]

[mypy-graphviz.*]
ignore_missing_imports = True

[flake8]
ignore = E501

[isort]
multi_line_output=3
include_trailing_comma=true
ensure_newline_before_comments=true
